next release
============

1.`sunrise/sunset`

If your weather provider doesn't deliver any sun relevant data, so fill 

	sr : '',
or
	sr : null,

(with an empty string or null).	

The sun relevant date will be vanished completely and leave an empty place in the PNG.
