@@ -21,17 +21,6 @@ var utils = require('../utils.js');
         // check for nodeJS
         hasModule = (module !== 'undefined' && module.exports),
 
-        url_template = 'http://api.wunderground.com/api/{{apikey}}/astronomy/conditions/forecast/lang:{{language}}/q/{{locSpec}}.json',
-
-        // in : http://www.iso.org/iso/home/standards/country_codes/iso-3166-1_decoding_table.htm
-        // out : http://www.wunderground.com/weather/api/d/docs?d=resources/country-to-iso-matching
-        isoToProviderMapping = {
-            'de' : 'DL',
-            'dk' : 'DN',
-            'ru' : 'RS',
-            'tr' : 'TU'
-        },
-
         iconMap = {
 
             chanceflurries: 'sn',
@@ -71,16 +60,6 @@ var utils = require('../utils.js');
             hazy: 'mist'
 
         };
-
-    function serviceUrl(loc) {
-
-        return utils.fillTemplates(url_template, {
-            apikey: process.env.WONDERGROUND_KEY,
-            language: loc.language,
-            locSpec: loc.name
-        });
-
-    }
 
     // Extracts the temperature of the given `forecastday` and map it into a 
     // API compatible Object.
