@@ -29,6 +29,7 @@ var utils = require('../utils.js'),
 
         cacheTTL = 0,
 
+        // @see http://www.wunderground.com/weather/api/d/docs?d=data/index
         apiUri = 'http://api.wunderground.com/api/'
             + '{{apiKey}}'
             + '/astronomy/conditions/forecast'
@@ -36,8 +37,8 @@ var utils = require('../utils.js'),
             + '/q'
             + '/{{locSpec}}.json',
 
-        // in : http://www.iso.org/iso/home/standards/country_codes/iso-3166-1_decoding_table.htm
-        // out : http://www.wunderground.com/weather/api/d/docs?d=resources/country-to-iso-matching
+        // @see in : http://www.iso.org/iso/home/standards/country_codes/iso-3166-1_decoding_table.htm
+        // @see out : http://www.wunderground.com/weather/api/d/docs?d=resources/country-to-iso-matching
         isoCountryToProvider = {
             'de' : 'DL',
             'dk' : 'DN',
@@ -45,10 +46,17 @@ var utils = require('../utils.js'),
             'tr' : 'TU'
         };
 
+    /** 
+     * Maps a country code coded in `iso-3166-1` to the interrnal 
+     * 'wunderground' representation.
+     * Not all countries have a special 'wunderground' representation.
+     *
+     * @param {iso} Object
+     * @return String
+     *
+     * @api private
+     */
 
-    //
-    //
-    //
     function mapIsoCountryToProvider(iso) {
 
         var mapped = isoCountryToProvider[iso];
@@ -56,34 +64,33 @@ var utils = require('../utils.js'),
 
     }
 
-    //
-    //
-    //
-    function populateApiUri(loc) {
+    /** 
+     * Populates the `apiUri` string with a given location and the `apiKey`
+     *
+     * @param {location} Object
+     * @return String
+     *
+     * @api private
+     */
+    function populateApiUri(location) {
 
         return utils.fillTemplates(apiUri, {
             apiKey : apiKey,
-            language : mapIsoCountryToProvider(loc.language),
-            locSpec : loc.name
+            language : mapIsoCountryToProvider(location.language),
+            locSpec : location.name
         });
 
     }
 
-    //
-    //
-    //
-    function requestParams(location) {
+    /** 
+     * Submits the request to 'Wunderground'
+     *
+     * @param {params} Object
+     * @params {cb} Function
+     *
+     * @api private
+     */
 
-        return {
-            uri : populateApiUri(location),
-            proxy : proxy
-        };
-
-    }
-
-    //
-    //
-    //
     function doFetchIt(params, cb) {
 
         request(params, function (err, res, body) {
@@ -103,12 +110,16 @@ var utils = require('../utils.js'),
 
     }
 
-    //
-    //
-    //
-    function fetchIt(location, cb) {
+    /** 
+     * Wraps the true submit 
+     *
+     * @param {params} Object
+     * @params {cb} Function
+     *
+     * @api private
+     */
 
-        var params = requestParams(location);
+    function fetchIt(params, cb) {
 
         doFetchIt(params, function (err, jsonData) {
 
@@ -121,12 +132,57 @@ var utils = require('../utils.js'),
 
         });
 
+    }
+
+    /** 
+     * Submits a request and fetchs the response, the wather data.
+     *
+     * @param {location} Object
+     * @params {cb} Function
+     *
+     * @api private
+     */
+
+    function get(location, cb) {
+
+        var cached,
+            params = {
+                uri : populateApiUri(location),
+                proxy : proxy
+            };
+
+        if (cacheTTL === 0) {
+            fetchIt(params, cb);
+            return;
+        }
+
+        cached = cache.get(location.id);
+
+        if (cached === null) {
+
+            fetchIt(params, function (jsonData) {
+
+                cache.put(location.id, jsonData, cacheTTL);
+
+                cb(jsonData);
+
+            });
+
+
+        } else {
+            cb(cached);
+        }
 
     }
 
-    //
-    //
-    //
+    /** 
+     * Sets the time to live for the cache.
+     *
+     * @param {ttl} Integer
+     *
+     * @api private
+     */
+
     function setTTL(ttl) {
 
         if (ttl === undefined || ttl === null) {
@@ -136,39 +192,6 @@ var utils = require('../utils.js'),
         cacheTTL = ttl * 1000;
         cache.clear();
     }
-
-    //
-    //
-    //
-    function get(location, cb) {
-
-        var cached;
-
-        if (cacheTTL === 0) {
-            fetchIt(location, cb);
-            return;
-        }
-
-        cached = cache.get(location.id);
-
-        if (cached === null) {
-
-            fetchIt(location, function (jsonData) {
-
-                cache.put(location.id, jsonData, cacheTTL);
-
-            console.log(jsonData);
-
-                cb(jsonData);
-
-            });
-
-        } else {
-            cb(cached);
-        }
-
-    }
-
 
     ///////////////////////////////////////////////////////////////////////////
 
@@ -194,8 +217,9 @@ var utils = require('../utils.js'),
 
     /** 
      * 
-     *
-     * @ param {apiKey} String 
+     * @param {proxy} String
+     * @param {apiKey} String 
+     * @param {ttl} Integer     
      *
      * @api public
      */
@@ -214,11 +238,8 @@ var utils = require('../utils.js'),
 
     WundergroundReq.prototype = {
 
-        serviceUrl : function (loc) {
-            return populateApiUri(loc);
-        },
-
-        get : function (location, ttl, cb) {
+        // submit
+        get : function (location, cb) {
             get(location, function (jsonData) {
                 cb(jsonData);
             });
@@ -228,8 +249,6 @@ var utils = require('../utils.js'),
             setTTL(ttl);
             return this;
         }
-
-        fetchIt : HIER WEITER
 
     };
 
